--- a/accountbird-project/client/package.json
+++ b/accountbird-project/client/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-router-dom": "^7.8.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "stripe": "^18.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -24,6 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "overrides": {},
   "eslintConfig": {
     "extends": [
       "react-app",
